[FIX] to_backend_theme: icon was not centered

--- a/to_backend_theme/static/src/scss/discuss.scss
+++ b/to_backend_theme/static/src/scss/discuss.scss
@@ -7,6 +7,15 @@
 .o_DiscussSidebarMailbox_counter {
     padding-top: 4px;
 }
+.o_ThreadIcon_online { 
+    font-size: 1.1em;
+}
+.o_ThreadIcon_channelPrivate{
+    &.fa{
+        font-size: 1.2em;
+        padding-top: 2px;
+    }
+}
 @media (max-width: 767.98px){
 	.o_preview_name {
 		font-size: 1.1em;
